feat: add postgres to docker-compose, add alembic, add migrations

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,13 @@ services:
       - .env
     entrypoint:
       - ./entrypoints/fastapi.sh
+
+  postgres_app:
+    image: postgres:alpine
+    container_name: ${POSTGRES_HOST}
+    ports:
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
+    env_file:
+      - .env
+    volumes:
+      - ./postgres_data:/var/lib/postgresql/data
