--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 WEB_HOST=todo_auth
 WEB_PORT=8000
 WEB_CONTAINER_HOST=0.0.0.0
+
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+DB_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?async_fallback=True
