--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,10 @@ name = "pypi"
 
 [packages]
 fastapi = {extras = ["all"], version = "*"}
+sqlalchemy = "*"
+alembic = "*"
+psycopg = "*"
+asyncpg = "*"
 
 [dev-packages]
 pre-commit = "*"
