--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,9 @@ POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 DB_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?async_fallback=True
+
+JWT_SECRET_KEY=ws2s1x%#3f$*&2r!els0a_a)q-*lv+vm+&ck-ob1yigi^lw)0
+JWT_ACCESS_TOKEN_EXPIRES_IN=15
+JWT_REFRESH_TOKEN_EXPIRES_IN=1
+JWT_ALGORITHM=HS256
+HTTP_AUTH_KEYWORD=Bearer
