--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ sqlalchemy = "*"
 alembic = "*"
 psycopg = "*"
 asyncpg = "*"
+passlib = "*"
+bcrypt = "==4.0.1"
+pyjwt = "*"
 
 [dev-packages]
 pre-commit = "*"
