feat: add http auth headers

--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,6 @@ JWT_SECRET_KEY=ws2s1x%#3f$*&2r!els0a_a)q-*lv+vm+&ck-ob1yigi^lw)0
 JWT_ACCESS_TOKEN_EXPIRES_IN=15
 JWT_REFRESH_TOKEN_EXPIRES_IN=1
 JWT_ALGORITHM=HS256
+
+HTTP_AUTH_HEADER=Authorization
 HTTP_AUTH_KEYWORD=Bearer
