--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,16 @@ WEB_HOST=todo_auth
 WEB_PORT=8000
 WEB_CONTAINER_HOST=0.0.0.0
 
+WORKERS=3
+
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 DB_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?async_fallback=True
+DB_POOL_SIZE=10
+DB_MAX_OVERFLOW=10
 
 JWT_SECRET_KEY=ws2s1x%#3f$*&2r!els0a_a)q-*lv+vm+&ck-ob1yigi^lw)0
 JWT_ACCESS_TOKEN_EXPIRES_IN=15
