--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,4 +6,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - run: pip install black flake8 isort mypy pytest
+#      - run: pip install black flake8 isort mypy pytest
+      - uses: actions/checkout@v4
+      - uses: TrueBrain/actions-flake8@v2
