feat: add isort

--- a/.github/workflows/auth.pipeline.yml
+++ b/.github/workflows/auth.pipeline.yml
@@ -21,3 +21,8 @@ jobs:
         with:
           options: "--check --verbose"
           version: "23.11.0"
+
+      - name: Format with isort
+        uses: davidslusser/actions_python_isort@v5.12.0
+        with:
+          options: "--check --diff"
