--- a/.github/workflows/auth.pipeline.yml
+++ b/.github/workflows/auth.pipeline.yml
@@ -7,7 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install packages
-        run: pip install mypy
+        run: pip install poetry & poetry config virtualenvs.create false
+      - run: poetry install --dev
 
       - name: Format with flake8
         uses: actions/checkout@v4
@@ -26,3 +27,6 @@ jobs:
         uses: davidslusser/actions_python_isort@v1.0.0
         with:
           options: "--check --diff --profile black --filter-files"
+
+      - name: Typing with mypy
+        run: mypy .
