--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,16 @@ bcrypt = "4.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
+faker = "^22.7.0"
+pytest-asyncio = "^0.23.4"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+pythonpath = [
+    ".", "src",
+]
+asyncio_mode="auto"
