--- a/.github/workflows/auth.pipeline.yml
+++ b/.github/workflows/auth.pipeline.yml
@@ -32,6 +32,8 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
+      - name: test
+        run: ls
       - name: Install packages
         run: pip install poetry
       - run: poetry config virtualenvs.create false
