--- a/.github/workflows/auth.pipeline.yml
+++ b/.github/workflows/auth.pipeline.yml
@@ -32,27 +32,12 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.11
-
+      - uses: actions/checkout@v3
       - name: Install poetry
-        uses: snok/install-poetry@v1.0.0
+        run: pipx install poetry
+      - uses: actions/setup-python@v3
         with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-
-      - name: Install Dependencies
-        run: poetry install
-        if: steps.cache.outputs.cache-hit != 'true'
-
-      - name: Load cached venv
-        id: cached-poetry-dependencies
-        uses: actions/cache@v2
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies
-        run: poetry install
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+          python-version: "3.11"
+          cache: "poetry"
+      - run: poetry install
+      - run: poetry run pytest
