--- a/.github/workflows/auth.pipeline.yml
+++ b/.github/workflows/auth.pipeline.yml
@@ -32,6 +32,9 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
+      - name: Create .env
+        run: cp ./.env.example ./.env
+
       - uses: actions/checkout@v3
       - name: Install poetry
         run: pipx install poetry
