feat: create .env file

--- a/.github/workflows/auth.pipeline.yml
+++ b/.github/workflows/auth.pipeline.yml
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Create .env
-        run: cp ./.env.example ./.env
+        run: cp /.env.example /.env
 
       - uses: actions/checkout@v3
       - name: Install poetry
