--- a/.github/workflows/auth.pipeline.yml
+++ b/.github/workflows/auth.pipeline.yml
@@ -32,15 +32,13 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Create .env
-        run: cp /.env.example /.env
+      - uses: actions/checkout@v3
+        name: Create .env
+      - run: cp /.env.example /.env
 
       - uses: actions/checkout@v3
-      - name: Install poetry
-        run: pipx install poetry
+        name: Install poetry
+      - run: pipx install poetry
       - uses: actions/setup-python@v3
         with:
           python-version: "3.11"
