--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ bcrypt = "4.0.1"
 pre-commit = "^3.6.0"
 faker = "^22.7.0"
 pytest-asyncio = "^0.23.4"
+schemathesis = "^3.24.3"
 
 [build-system]
 requires = ["poetry-core"]
