--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pre-commit = "^3.6.0"
 faker = "^22.7.0"
 pytest-asyncio = "^0.23.4"
 schemathesis = "^3.24.3"
+pytest-mock = "^3.12.0"
 
 [build-system]
 requires = ["poetry-core"]
