--- a/.github/workflows/auth.pipeline.yml
+++ b/.github/workflows/auth.pipeline.yml
@@ -36,7 +36,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         name: Create env file
-      - run: echo "${{ secrets.ENV_FILE }}"
+      - run: echo "Hello world"
+#      - run: echo "${{ secrets.ENV_FILE }}"
 #      - run: echo "${{ secrets.ENV_FILE }}" > .env
 
 #      - run: |
