--- a/.github/workflows/auth.pipeline.yml
+++ b/.github/workflows/auth.pipeline.yml
@@ -34,7 +34,7 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-#      - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Create env file
         run: echo "Hello world"
 
