--- a/.github/workflows/auth.pipeline.yml
+++ b/.github/workflows/auth.pipeline.yml
@@ -35,8 +35,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Create env file
-        run: echo "${{ secrets.ENV_FILE }}" > .env
+        name: Create env file
+      - run: echo "${{ secrets.ENV_FILE }}" > .env
 
 #      - run: |
 #          touch .env
@@ -60,11 +60,11 @@ jobs:
 #          echo HTTP_AUTH_KEYWORD=${{ secrets.HTTP_AUTH_KEYWORD }} >> .env
 #          cat .env
 
-#        name: Install poetry
-#      - run: pipx install poetry
-#      - uses: actions/setup-python@v3
-#        with:
-#          python-version: "3.11"
-#          cache: "poetry"
-#      - run: poetry install
-#      - run: poetry run pytest
+        name: Install poetry
+      - run: pipx install poetry
+      - uses: actions/setup-python@v3
+        with:
+          python-version: "3.11"
+          cache: "poetry"
+      - run: poetry install
+      - run: poetry run pytest
