--- a/.github/workflows/auth.pipeline.yml
+++ b/.github/workflows/auth.pipeline.yml
@@ -64,6 +64,6 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "3.11"
-          cache: "poetry"
+#          cache: "poetry"
       - run: poetry install
       - run: poetry run pytest
