--- a/.github/workflows/auth.pipeline.yml
+++ b/.github/workflows/auth.pipeline.yml
@@ -47,7 +47,7 @@ jobs:
           python-version: "3.11"
           cache: "poetry"
       - run: poetry install
-      - run: poetry run pytest -p no:warnings
+      - run: poetry run pytest -p no:warnings -m "not schemathesis"
   schemathesis:
     runs-on: ubuntu-latest
     steps:
@@ -64,4 +64,4 @@ jobs:
           python-version: "3.11"
           cache: "poetry"
       - run: poetry install
-      - run: poetry run pytest -p no:warnings ./src/tests/api_tests.py
+      - run: poetry run pytest -p no:warnings -m "schemathesis" ./src/tests/api_tests.py
