--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ asyncpg = "^0.29.0"
 passlib = "^1.7.4"
 pyjwt = "^2.8.0"
 bcrypt = "4.0.1"
+dependency-injector = "^4.41.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -22,6 +23,8 @@ faker = "^22.7.0"
 pytest-asyncio = "^0.23.4"
 schemathesis = "^3.24.3"
 pytest-mock = "^3.12.0"
+testcontainers = "^3.7.1"
+psycopg2-binary = "^2.9.9"
 
 [build-system]
 requires = ["poetry-core"]
