feat: add init data to postgres

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,6 @@ HTTP_AUTH_HEADER=Authorization
 HTTP_AUTH_KEYWORD=Bearer
 
 DEFAULT_NETWORK=auth_default
+
+SUPERUSER_USERNAME=admin
+SUPERUSER_PASSWORD=admin
