--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+ALLOW_ORIGINS=["http://localhost:3000"]
+ALLOW_CREDENTIALS=1
+ALLOW_METHODS=["*"]
+ALLOW_HEADERS=["*"]
+
 WEB_HOST=todo_auth
 WEB_PORT=8000
 WEB_CONTAINER_HOST=0.0.0.0
